force-app/main/default/objects/ks_pmj_base__Function__c/ks_pmj_base__Function__c.object-meta.xml
<CustomObject>
    <label>機能</label>
    <nameField>
        <label>機能名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>