force-app/main/default/objects/ks_pmj_base__Function__c/fields/ks_pmj_base__Category1__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Category1__c</fullName>
    <label>実現方針</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>標準カスタマイズ</fullName>
            </value>
            <value>
                <fullName>個別開発</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>