force-app/main/default/objects/ks_pmj_base__Function__c/fields/ks_pmj_base__Category1Else__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Category1Else__c</fullName>
    <label>実現方針(その他)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>