force-app/main/default/objects/ks_pmj_base__Function__c/fields/ks_pmj_base__Category2__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Category2__c</fullName>
    <label>機能種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>オブジェクト</fullName>
            </value>
            <value>
                <fullName>プロファイル</fullName>
            </value>
            <value>
                <fullName>ロール</fullName>
            </value>
            <value>
                <fullName>アプリケーション</fullName>
            </value>
            <value>
                <fullName>アプリケーションページ</fullName>
            </value>
            <value>
                <fullName>ダッシュボード</fullName>
            </value>
            <value>
                <fullName>レポート</fullName>
            </value>
            <value>
                <fullName>開発（トリガ）</fullName>
            </value>
            <value>
                <fullName>開発（Lightningコンポーネント）</fullName>
            </value>
            <value>
                <fullName>開発（.Net）</fullName>
            </value>
            <value>
                <fullName>開発（Apexバッチ）</fullName>
            </value>
            <value>
                <fullName>外部連携</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>