force-app/main/default/objects/ks_pmj_base__Function__c/fields/ks_pmj_base__FunctionDetal__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__FunctionDetal__c</fullName>
    <inlineHelpText>ご提案時の機能想定となります</inlineHelpText>
    <label>提案時機能概要</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>