force-app/main/default/objects/ks_pmj_base__Function__c/fields/ks_pmj_base__LastApprover__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__LastApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Function</relationshipName>
    <type>Lookup</type>
</CustomField>