force-app/main/default/objects/ks_pmj_base__Function__c/fields/ks_pmj_base__RequestFixedDate__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__RequestFixedDate__c</fullName>
    <label>仕様凍結予定日</label>
    <type>Date</type>
</CustomField>